3 trang giao diện cơ bản

--- a/NoobsHackathon/app/src/main/res/layout/activity_sua_mon_hoc.xml
+++ b/NoobsHackathon/app/src/main/res/layout/activity_sua_mon_hoc.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.noobs.noobshackathon.ChonDapAnActivity">
+    tools:context="com.noobs.noobshackathon.SuaMonHocActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,12 +17,36 @@
             android:layout_height="wrap_content"
             android:text="Luu" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tên môn học" />
+
         <EditText
             android:id="@+id/txtTenMonHoc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Số lượng câu hỏi" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Đáp án các đề" />
 
         <ListView
             android:id="@+id/lvDsDapAn"
