--- a/NoobsHackathon/app/src/main/res/layout/activity_sua_dap_an.xml
+++ b/NoobsHackathon/app/src/main/res/layout/activity_sua_dap_an.xml
@@ -8,19 +8,19 @@
     tools:context="com.noobs.noobshackathon.SuaDapAnActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="Button" />
+        android:layout_alignParentEnd="true"
+        android:text="Luu" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.80"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/button2">
 
         <TextView
             android:id="@+id/textView7"
@@ -29,13 +29,12 @@
             android:layout_weight="1"
             android:text="Mã đề" />
 
-        <EditText
+        <TextView
             android:id="@+id/txtMaDe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName|numberDecimal" />
+            android:text="TextView" />
 
     </LinearLayout>
 
