--- a/NoobsHackathon/app/src/main/res/layout/item_cautraloi.xml
+++ b/NoobsHackathon/app/src/main/res/layout/item_cautraloi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -18,6 +19,14 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioButton5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColorLink="@color/colorPrimary"
+            app:buttonTint="@color/colorPrimary" />
 
         <RadioButton
             android:id="@+id/radA"
